--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="white">
-    <title>PWA-LOCALIZAR</title>
+    <title>Basic&Sweet</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="images/pwa-icon-256.png" sizes="256x256">
@@ -33,18 +33,22 @@
               </div>
             </div>
           </nav>
-         
-          <div class="row">
-            <div class="card col-4" id="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title" id="titulo">Card title</h5>
-                <p class="card-text" id="descricao">Some quick example text to build on the card title and make up the bulk of the card's content</p>
-                <p class="card-text" id="preco">Preço: R$</p>
-                <a href="#" class="btn" style="background-color: #ffeaf2;"> Visualizar</a>
-                </div>
-            </div>
-        </div>
     </section>
+
+    <main>
+       <div class="container col-8">
+          <div class="d-flex row">
+            <div class="card me-4 col-4 mt-4" id="card" style="width: 18rem;">
+              <img src="${article.img}" class="card-img-top">
+              <div class="card-body">
+              <h5 class="card-title">${article.titulo}</h5>
+              <p class="card-text">${article.descricao}</p>
+              <p class="card-text">Preço: R$ $ ${article.preco}</p>
+              <a href="#" class="btn" style="background-color: #ffeaf2;"> Visualizar</a>
+            </div>
+          </div>
+       </div>
+    </main>
+
  </body>
 </html>
