--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta name="theme-color" content="white" />
     <script src="/js/main.js" defer></script>
+    <script src="visualizar.html" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </head>
@@ -35,7 +36,14 @@
           </nav>
     </section>
 
-    <main class="container d-flex flex-wrap justify-content-center"></main>
+    <div>
+      <img src="https://thumbs.dreamstime.com/b/desenho-da-m%C3%A3o-do-vestido-do-manequim-75552060.jpg" class="rounded float-left">
+        <div id="text">
+          <h1>Basic&Sweet</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="visualizar" class="btn btn-outline" style="background-color: #ffeaf2;">Visualizar Produtos</a>
+        </div>
+    </div>
 
  </body>
 </html>
