--- a/index.html
+++ b/index.html
@@ -66,25 +66,23 @@
             <a href="visualizar" class="btn btn-outline" style="background-color: #ffeaf2;">Visualizar Produtos</a>
           </div>
       
-          <div class="conteudo">
-            <header class="cabecalhoConteudo">
-              <h2>Ver sua Localização</h2>
-            </header>
-            <div class="conteudoLocalizacao">
-              <p>
-                Latitude: <span id="latitude">0.0</span>
-              </p>
-              <p>
-                Logitude: <span id="longitude">0.0</span>
-              </p>
-              <div>
-                <button class="botao" id="localizacao">Capturar Localização</button>
+            <div class="conteudo">
+              <header class="cabecalhoConteudo">
+                <h2>Ver sua Localização</h2>
+              </header>
+              <div class="conteudoLocalizacao">
+                <p>
+                  Latitude: <span id="latitude">0.0</span>
+                </p>
+                <p>
+                  Logitude: <span id="longitude">0.0</span>
+                </p>
+                <div>
+                  <button class="botao btn btn-outline-light" id="localizacao">Capturar Localização</button>
+                </div>
               </div>
-            </div>
-          </div>
-      
-          <div class="mapouter"><div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
-      </iframe>
+              <div class="mapouter"><div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+            </iframe>
 
     </section>
  </body>
