--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Basic&Sweet</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="images/pwa-icon-256.png" sizes="256x256">
-    <link rel="apple-touch-icon" href="images/pwa-icon-256.png" sizes="256x256"/>
+    <link rel="shortcut icon" href="images/icon-256x256.png" sizes="256x256">
+    <link rel="apple-touch-icon" href="images/icon-512x512.png" sizes="512x512"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta name="theme-color" content="white" />
     <script src="/js/main.js" defer></script>
@@ -63,7 +63,7 @@
           <div id="text">
             <h1>Basic&Sweet</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="visualizar" class="btn btn-outline" style="background-color: #ffeaf2;">Visualizar Produtos</a>
+            <a href="/visualizar" class="btn btn-outline" style="background-color: #ffeaf2;">Visualizar Produtos</a>
           </div>
       
             <div class="conteudo">
@@ -81,9 +81,9 @@
                   <button class="botao btn btn-outline-light" id="localizacao">Capturar Localização</button>
                 </div>
               </div>
-              <div class="mapouter"><div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
-            </iframe>
-
+            <center>
+              <div class="mapouter"><div class="gmap_canvas"><iframe id="mapa" class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.3076008,51.4803216&z=16&output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;align-self: center;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+            </center>
     </section>
  </body>
 </html>
