--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
           </nav>
           
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="min-width: 500px;">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" id="carrosel">
               <div class="carousel-item active">
                 <img src="https://img.ltwebstatic.com/images3_pi/2022/08/26/1661478680e5959f9db51c607ec2a742882f2fe761_thumbnail_600x.webp" class="d-block w-100" alt="...">
